--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
